templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: f1-platform
  labels:
    name: f1-platform
