templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: f1-platform
spec:
  type: NodePort
  selector:
    app: minio-s3
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: minio-dashboard-service
  namespace: f1-platform
spec:
  type: NodePort
  selector:
    app: minio-s3
  ports:
  - protocol: TCP
    port: 9001
    targetPort: 9001
    name: http
