templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-dashboard-ingress
  namespace: f1-platform
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: storage.f1-platform.k8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-dashboard-service
            port:
              number: 9001
